test-files/expected/singleIdentifier.errors
singleIdentifier:1:1: error: could not resolve "x" as Value
   1 | x
     | ^
