test-files/expected/singleIdentifier.tree
Module @ 0-1 {
  statements: [
    ExpressionStatement @ 0-1 {
      expression: Identifier @ 0-1 = x
    }
  ]
}
